# stacktape

./: .cursorrules  .debug-bundler.json  .debug.json  .gitattributes  .gitignore  .gitmodules  .npmrc  .oxfmtrc.json  .oxlintrc.json  .prettierrc  AGENTS.md  CLAUDE.md  MIGRATION_PLAN_PRINTER_TO_TUI.md  README.md  bunfig.toml  cspell.config.json  dependency-cruiser.config.cjs  dprint.json  eslint.config.ts  generate-starter-project.ts  jscpd.json  knip.json  local-dev-mode-task.md  opencode.json  opencode.jsonc  package.json  page.html  pnpm-lock.yaml  pnpm-workspace.yaml  sgconfig.yml  skills-lock.json  stacktape.ts  starter-projects-metadata.json  taze.config.js  tsconfig.base.json  tsconfig.build.json  tsconfig.json  tsconfig.package.json  tsconfig.tools.json  turbo.json
.claude/: launch.json  settings.local.json
.githooks/: pre-commit
@generated/: cloudformation-resource-referenceable-params.json  cloudformation-resource-types.json
PLAN/: Phase0.md  Phase1.md  Phase2.md  Phase3.md  Phase4.md  Phase5.md  README.md
_skills/: SKILL.md  stacktape-config.md  stacktape-dev.md
docs/: .resources.json  CLAUDE.md  DOCS_PIPELINE_PLAN.md  DOCS_STRUCTURE_PLAN.md  astro.config.mjs  config-new-docs.ts  config-original.ts  config.ts  dev-mode-tunneling-plan.md  directives.ts  global-state.ts  globals.d.ts  next-sitemap.config.js  next.config.ts  package.json  stacktape.ts  tsconfig.json  tsconfig.tsbuildinfo
install/: windows.ps1
install-scripts/: alpine.sh  linux.sh  macos-arm.sh  macos.sh  windows.ps1
patches/: ink@6.7.0.patch
scripts/: build-config-converter.ts  build-dist-package.ts  build-npm-main-export.ts  build-npm-sdk-export.ts  build-npm.ts  build-server.ts  compile-cf-schema.ts  dev.ts  download-bore-binaries.ts  download-pack-binaries.ts  execute-starter-project.ts  generate-ai-docs-v2.ts  (+45 more)
starter-projects/django-api-postgres/: Procfile  README.md  db.sqlite3  manage.py  pyproject.toml  stacktape.ts  stacktape.yml
starter-projects/django-api-postgres/.project/: _metadata.yml  description.md  stack-descriptions.md
starter-projects/django-api-postgres/posts/: models.py  serializers.py  views.py
starter-projects/django-api-postgres/posts/migrations/: 0001_initial.py
starter-projects/django-api-postgres/postsproject/: asgi.py  settings.py  urls.py  wsgi.py
starter-projects/fastapi-api-postgres/: .gitignore  pyproject.toml  stacktape.ts  stacktape.yml
starter-projects/fastapi-api-postgres/.project/: _metadata.yml  description.md  stack-descriptions.md
starter-projects/fastapi-api-postgres/app/: main.py
starter-projects/flask-api-postgres/: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  stacktape.ts  stacktape.yml
starter-projects/flask-api-postgres/.project/: _metadata.yml  description.md  stack-descriptions.md
starter-projects/flask-api-postgres/migrations/versions/: 056518b25abd_.py
starter-projects/python-lambda-api/src/lambdas/: get-posts.py  pyproject.toml  save-post.py
(+9166 files in other folders)
