[project]
name = "django-api-postgres"
version = "0.1.0"
description = "Stacktape example Django API"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1",
    "djangorestframework>=3.15",
    "psycopg2-binary>=2.9",
    "dj-database-url>=2.3",
    "gunicorn>=23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["posts", "postsproject"]
