[tool.poetry]
name = "flask-api-postgres"
version = "1.0.0"
description = "Flask API with Postgres database deployed by Stacktape"
authors = ["Stacktape team <info@stacktape.com>"]
license = "private"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.1.2"
Flask-Migrate = "^3.1.0"
Flask-SQLAlchemy = "^2.5.1"
psycopg2-binary = "^2.9.3"
waitress = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
