[project]
name = "flask-api-postgres"
version = "1.0.0"
description = "Flask API with Postgres database deployed by Stacktape"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1",
    "flask-migrate>=4.1",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "waitress>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
