[tool.poetry]
name = "stacktapePyMongoLambda"  # no hypens `-`!
version = "0.1.0"
description = "Example AWS Lambda Function using mongodb"
authors = ["stacktape"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^4.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
